--- a/index.html
+++ b/index.html
@@ -1,20 +1,80 @@
 <!DOCTYPE html>
-		<html>
-		  <head>
-			<meta charset="utf-8">
-			<meta name="viewport" content="width=device-width">
-			<title>My Profile</title>
-		  </head>
-		  <body>
-			<div align="center">
-				<h1>YOUR NAME HERE</h1>
-				<h2>Software Developer</h2>
-				<hr>
-				<h3>About Me:</h3>
-					<h4>My hometown is HOMETOWN.</h4>
-					<h4>My favorite color is COLOR.</h4>
-					<h4>My favorite food is FOOD.</h4>
-					<h4>If I could be any animal, I would be A/AN ANIMAL.</h4>
-			</div>
-		  </body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>My Profile</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+	
+  </head>
+  <body>
+	<hr>
+	<div align="center">
+	<h1>Erik Garwick</h1>
+	<img src="./Erik Profile.jpg" alt="Professional Picture">
+	  <h2>Manager/Leader/Software Developer</h2>
+	</div>
+	<hr>
+	<h1>About Me:</h1>
+	<h3>Daily Activities:</h3>
+	   <ol>
+	  <li>Provide for my Family!</li>
+	  <li>Drink Plenty Of Coffee!</li>
+	  <li>Work on Amazing Projects!</li>
+	  <li>Travel!</li>
+	  <li>Code until I pass out!</li>
+	  <li>Focus on Eating Better</li>
+	  <li>Meditate</li>
+	  <li>Focus on being grateful!</li>
+	  <li>Learning</li>
+	  <li>Helping others with great tech!</li>
+	  <li>Saving Water!</li>
+	  <li>Not worrying about things I can't change!</li>
+	   </ol>
+	<hr>
+       <p>"Analysis of my daily activities by ChatGPT"<strong> "Overall, your list suggests that you are driven, proactive, and have a positive outlook on life."</strong>  </p>
+	<hr>
+	<h3>The first 3 years of my life I spent live in Chinatown Downtown Los Angeles. Since then, I have lived:</h3>
+				<ol>
+					<li>Chinatown, Los Angeles</li>
+					<li>Portland, Oregon </li>
+					<li>Inglewood, CA</li>
+					<li>CulverCity, CA</li>
+					<li>Lanscaster, CA</li>
+					<li>San Fernando Valley ,CA </li>
+					<li>Palmdale ,CA</li>
+					<li>Anahiem ,CA</li>
+					<li>Fullerton ,CA</li>
+					<li>Dana Point ,CA</li>
+					<li>Yoba Linda ,CA</li>
+					<li>Upland ,CA</li>
+					<li>Fontana ,CA</li>
+					<li>Colton ,CA</li>
+					<li>Chula Vista ,CA</li>
+					<li>Playas,Tijuana, Mexico Baja Cailfornia</li>
+					<hr>
+				</ol>
+				<h3>During that time I worked at some incredible jobs and projects!</h3>
+				 <ol>
+				<li>Yoshinoya, Cook/Server, CulverCity</li>
+				<li>Triple A Towing- Tow Truck Driver, Ingelwood</li>
+				<li>Bruffy Towing-Tow truck Driver, Marina Del Rey</li>
+				<li>Y&LTowing Tow Truck Driver, Acton</li>
+				<li>Orkin Pest Control Appilcator, San Fernando Valley</li>
+				<li>Clark Pest Control Pest Control Appilcator, Palmdale </li>
+				<li>Orkin Pest Control Appilcator, Palmdale</li>
+				<li>Disneyland Resort Horticulture Manager, Anahiem</li>
+				<li>City of Fontana Parks and Landcape Supervisor, Fontana</li>
+				<li>City of Oxnard Parks Manager, Oxnard</li>
+				<li>City of Rosemead Public Works Manager, Rosemead</li>
+				<li>City of Chula Vista Parks Manager, Chula Vista</li>
+			    </ol>
+				</body>
+		  
+		 
+		 
+		 
+		 
+		 
+		  
 		</html>
